# A.D.A.M--Automated-Developer-and-Assistance-Module

./: .gitignore  README.md  README_JARVIS.md  pyproject.toml  requirements.txt
A.D.A.M- Automated Developer and Assistance Module/ADAM/: .env.example  .gitignore  README.md  __init__.py  alembic.ini  main.py  pyproject.toml  requirements.txt
A.D.A.M- Automated Developer and Assistance Module/ADAM/agents/: __init__.py  agent.py  context.py  lifecycle.py  memory.py  planner.py  registry.py  runtime.py
A.D.A.M- Automated Developer and Assistance Module/ADAM/aiops/: __init__.py  context_builder.py  embeddings.py  memory_index.py  retrieval.py  vector_store.py
A.D.A.M- Automated Developer and Assistance Module/ADAM/automations/: __init__.py  executor.py  history.py  memory.py  registry.py  scheduler.py  triggers.py  workflow.py
A.D.A.M- Automated Developer and Assistance Module/ADAM/config/: logging.yaml  settings.yaml  skills.yaml
A.D.A.M- Automated Developer and Assistance Module/ADAM/connections/: __init__.py  model_registry.py  ollama.py  powershell.py
A.D.A.M- Automated Developer and Assistance Module/ADAM/core/: app.py  config.py  database.py  events.py  exceptions.py  init_db.py  registry.py  types.py
A.D.A.M- Automated Developer and Assistance Module/ADAM/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
A.D.A.M- Automated Developer and Assistance Module/ADAM/ecc/: __init__.py  engine.py  memory.py  planning.py  reasoning.py  reflection.py  telemetry.py  validation.py
A.D.A.M- Automated Developer and Assistance Module/ADAM/knowledge/: __init__.py  (+6 more)
(+170 files in other folders)
